Way too narrow, fix

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -262,8 +262,8 @@ pre {
 	}
 
 	article {
-		margin-left: 5rem;
-		margin-right: 5rem;
+		margin-left: 1rem;
+		margin-right: 1rem;
 	}
 	.hide {
         display: none;
